--- a/wp-content/themes/dor_master/public/css/styles.scss
+++ b/wp-content/themes/dor_master/public/css/styles.scss
@@ -169,7 +169,7 @@ header {
 }
 
 /*НАЧАЛО модальное окно*/
-#modal-article {
+.uk-modal {
   text-align: justify;
   .uk-modal-dialog {
     background: rgba(255, 255, 255, 0.85);
